--- a/51_css/part2/28_position.html
+++ b/51_css/part2/28_position.html
@@ -14,12 +14,12 @@
         /* 
             position: static; (기본값)
 
-            relative, absolute, fixed, sticky를 지정하면 left, right, top, bottom, z-index 속성을 사용할 수 있다.
+            static이 아니면 left, right, top, bottom, z-index 속성을 사용할 수 있다.
 
             position: relative; (자기자신)
-            position: absolute; (position이 static이 아닌 조상)
+            position: absolute; (position이 static이 아닌 조상을 기준으로 하는데 만약, 조상이 없으면 창을 기준으로 한다.)
             position: fixed; (창)
-            position: sticky;
+            position: sticky; (IE에서는 동작하지 않는다.)
             
             left: 숫자px;
             top: 숫자px;
@@ -38,15 +38,21 @@
         }
 
         /* (1) .pos1의 위치 속성을 static로 지정하시오. */
-
+        .pos1 {
+            position: static;
+        }
 
         /* (2) .pos2의 위치 속성을 relative로 지정하시오. */
         /* 자기자신 기준(즉, left를 적용하기 전 위치) */
+        .pos2 {
+            position: relative;
+        }
 
 
         /* static이 아닌 조상 기준 */
         /* (3) .pos3의 위치 속성을 absolute로 지정하시오. */
         .pos3 {
+            position: absolute;
             /* z-index의 값은 정수로 숫자가 클수록 위로 올라감. */
             z-index: 3;
         }
@@ -54,7 +60,11 @@
         /* 창 기준 */
         /* (4) .pos4의 위치 속성을 fixed로 지정하시오. */
         .pos4 {
-            z-index: 2;
+            position: fixed;
+            left: 300px;
+            top: 150px;
+            background: blue;
+            z-index: 4;
         }
 
         /* .container {
