--- a/51_css/part3/30-1_webFont.html
+++ b/51_css/part3/30-1_webFont.html
@@ -7,6 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+        /* @import를  @font-face 보다 위에 기록한다. */
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap');
+
+        @font-face {
+            font-family: 'SeoulNamsanM';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/SeoulNamsanM.woff') format('woff');/* format 생략 가능 */
+
+            /* src: url(../assets/font/SeoulNamsanM.woff); 내부 자료 링크 할 경우*/ 
+
+            font-weight: normal;
+            font-style: normal;
+        }
+
+
+        /* 
+            글꼴 format: *.ttf/*.otf, *.woff, *.eot
+        */
+
         /* @font-face {
             font-family: 'SeoulNamsanL';
             src: url('/51_css/assets/font/SeoulNamsanL.ttf');
@@ -21,20 +39,25 @@
         */
 
         /* .ff1에 구글 Noto Sans KR 폰트를 CDN 방식으로 지정해 보세요. */
-
+        .ff1 {
+            font-family: 'Noto Sans KR', sans-serif;
+        }
 
         /* .ff2에 서울 SeoulNamsanL 폰트를 @font-face 규칙을 사용하여 지정해 보세요. */
-
-
+        .ff2 {
+            font-family: 'SeoulNamsanM', sans-serif;
+        }
     </style>
 </head>
 
 <body>
     <h1>웹 폰트</h1>
-    <p>구글 웹 폰트(Google Web Font) 지정 안함.</p>
+    <p>구글 웹 폰트(Google Web Font) 지정 안함.</p><!-- 크롬 기본 글꼴 : 맑은 고딕 -->
     <p class="ff1">구글 웹 폰트(Google Web Font) 지정 했음.</p>
     <p>서울 서체(Seoul Font) 지정 안함.</p>
     <p class="ff2">서울 서체(Seoul Font) 지정 했음.</p>
+    <!-- https://fonts.google.com/ -->
+    <!-- https://noonnu.cc/ 저작권 유무 확인 후 사용 -->
 </body>
 
 </html>
