--- a/51_css/part3/30-4_font-style.html
+++ b/51_css/part3/30-4_font-style.html
@@ -11,6 +11,8 @@
             oblique는 원래 글꼴을 단지 기울어지게 표시할 뿐읻.
             기울어진 형태에 맞게 글꼴이 다음어지기 때문에 웹에서는 italic를 주로 사용한다.
         */
+        .fs1 {font-style: italic;}
+        .fs2 {font-style: oblique;}
 
     </style>
 </head>
