--- a/51_css/part3/30-5_font.html
+++ b/51_css/part3/30-5_font.html
@@ -11,11 +11,18 @@
             font-style: italic;
             font-weight: bold;
             font-size: 16px;
-            line-height: 1.6;
+            line-height: 1.6; /* 줄간격은 글자 크기의 1.6배 */
             font-family: 'Courier New', Courier, monospace;
         }
+        .font2 {
+            font: italic bold 16px/1.6 'Courier New', Courier, monospace;
+        }
 
-        /* font: [스타일] [굵기] 크기[/줄간격] 글꼴; */
+        /* 
+            (속기형)
+            font: 크기 글꼴; -> 순서 정해져 있음, 최소한 크기 글꼴 작성
+            font: [스타일] [굵기] 크기[/줄간격] 글꼴; -> 스카일, 굵기는 순서 바꿔도 됨
+        */
 
         
     </style>
