--- a/51_css/part3/30_font-family.html
+++ b/51_css/part3/30_font-family.html
@@ -8,6 +8,9 @@
     <style>
         /* 글꼴 이름에 공백이 있을 경우 ''으로 묶는다. */
         /* .ff의 글꼴을  'Courier New', Courier, monospace로 지정해 보세요.*/
+        .ff {
+            font-family: 'Courier New', Courier, monospace;
+        }
         
     </style>
 </head>
