--- a/51_css/part2/28-1_position.html
+++ b/51_css/part2/28-1_position.html
@@ -14,15 +14,21 @@
 
         /* .parent의 자식 div를 부모를 기준으로 정중앙 배치하시오. */
         .parent div {
+            position: absolute;
+            left: 50%;
+            top: 50%;
             width:200px;
-            /* height:50px; */
+            height:50px;
             background: red;
             /* width의 절반의 음수 값으로 지정한다. */
+            margin-left: -100px;
+           
             /* height의 절반의 음수 값으로 지정한다. */
+            margin-top: -25px;
 
             /* 텍스트 중앙 배치 */
-            text-align: center;
-            line-height: 50px;
+            /* text-align: center; */
+            /* line-height: 50px; */
         }
     </style>
 </head>
