--- a/51_css/part3/30-3_font-weight.html
+++ b/51_css/part3/30-3_font-weight.html
@@ -10,6 +10,19 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
         p {font-family: 'Inter', sans-serif;}
 
+        .fw1 {font-weight: 100;}
+        .fw1_1 {font-weight: lighter;}
+        .fw2 {font-weight: 200;}
+        .fw3 {font-weight: 300;}
+        .fw4 {font-weight: 400;}
+        .fw5 {font-weight: 500;}
+        .fw6 {font-weight: 600;}
+        .fw7 {font-weight: 700;}
+        .fw7_1 {font-weight: bold;}
+        .fw7_2 {font-weight: bolder;}
+        .fw8 {font-weight: 800;}
+        .fw9 {font-weight: 900;}
+
 
     </style>
 </head>
@@ -27,5 +40,6 @@
     <p class="fw7_2">font-weight: bolder;</p>
     <p class="fw8">font-weight: 800;</p>
     <p class="fw9">font-weight: 900;</p>
+    <!-- 보통 쓰임 : 200, 300, 400, 700 -->
 </body>
 </html>
