--- a/51_css/part3/31-2_text-decoration.html
+++ b/51_css/part3/31-2_text-decoration.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        /* .tdn에 텍스트 장식을 제거해 보세요. */
 
+        /* 
+            text-decoration: 꾸밈;
+        */
 
-        /* .tdu에 텍스트 밑줄을 지정해 보세요. */
+        /* .tdn에 텍스트 장식을 제거(none)해 보세요. */
+        .tdn {text-decoration: none;}
 
+        /* .tdu에 텍스트 밑줄(underline)을 지정해 보세요. */
+        .tdu {text-decoration: underline;}
 
-        /* .tdo에 텍스트 윗줄을 지정해 보세요. */
+        /* .tdo에 텍스트 윗줄(overline)을 지정해 보세요. */
+        .tdo {text-decoration: overline;}
 
-
-        /* .tdl에 텍스트 취소선을 지정해 보세요. */
-
+        /* .tdl에 텍스트 취소선(line-through)을 지정해 보세요. */
+        .tdl {text-decoration: line-through;}
         
     </style>
 </head>
