--- a/51_css/part3/32-1_list-style.html
+++ b/51_css/part3/32-1_list-style.html
@@ -9,14 +9,33 @@
     <style>
         ul, li {border:1px solid red;}
 
+        /* 
+            --type, image 두개를 쓸 경우 image가 우선 쓰임--
+            list-style-type: 항목 마커 유형;
+            list-style-image: url(경로/파일명); 이미지 마커
+            list-style-position: 마커 위치;
+                값: outside(기본값), inside
+
+            (속기형)
+            list-style: type|image position;
+        */
+
         /* .lsi의 마커를 이미지로 지정 */
-
+        .lsi {list-style-image: url(../assets/dot.png);}
         /* .lsp의 마커 위치를 안쪽으로 지정 */
-
+        .lsp {list-style-position: inside;}
         /* .lisn의 마커 숨기기 */
-
+        .lisn {list-style: none;}
         /* list-style: 타입 이미지 위치; */
         /* .lis의 목록 속성을 타입은 circle, dot.png 이미지, 위치는 inside로 지정해 보세요.(속기) */
+        .lis {
+            list-style-type: circle;
+            list-style-image: url(../assets/dot.png);
+            list-style-position: inside;
+
+            list-style: circle url(../assets/dot.png) inside;
+        }
+
         
         
     </style>
@@ -32,7 +51,7 @@
     <ul class="lsp">
         <li>아메리카노</li>
         <li class="lisn">카페모카</li>
-        <li>카페라떼</li>
+        <li class="lsi">카페라떼</li>
     </ul>
     <ul class="lisn">
         <li>아메리카노</li>
