--- a/51_css/part3/32_list-style-type.html
+++ b/51_css/part3/32_list-style-type.html
@@ -7,28 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+
+        /* 
+            list-style-type: 값;
+               ul 값1: disc, circle, square
+               ol 값2: decimal, decimal-leading-zero, upper-alpha, lower-alpha, ...
+               ul,ol 값3: none
+        */
+
         /* <ul>에 사용 */
         /* disc */
-
+        .lst1 {list-style-type: disc;}
         /* circle */
-
+        .lst2 {list-style-type: circle;}
         /* square */
+        .lst3 {list-style-type: square;}
 
         /* <ul>,<ol>에 모두 사용 - 항목 마커 제거 */
+        .lst10 {
+            list-style-type: none;
+
+            /* 속기형 */
+            list-style: none;
+        }
 
         /* <ol>에 사용 */
         /* decimal */
-        
+        .lst4 {list-style-type: decimal;}
         /* decimal-leading-zero */
-
+        .lst5 {list-style-type: decimal-leading-zero;}
         /* upper-alpha */
-
+        .lst6 {list-style-type: upper-alpha;}
         /* lower-alpha */
-
+        .lst7 {list-style-type: lower-alpha;}
         /* upper-roman */
-
+        .lst8 {list-style-type: upper-roman;}
         /* lower-roman */
-
+        .lst9 {list-style-type: lower-roman;}
     </style>
 </head>
 
