--- a/51_css/part3/31-3_text-indent.html
+++ b/51_css/part3/31-3_text-indent.html
@@ -6,23 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
+
+        /* 
+            text-indent: 문단의 첫 줄 들여쓰기;
+                값: px, %, 음수
+            ling-height: 줄간격;
+                값: px, %, 숫자(배수)
+            text-transform: 대소문자 변환;
+        */
+
         /* 들여쓰기 40px */
-
+        .tipx {text-indent: 40px;}
         /* %는 가로 크기가 기준: 50% */
-        
+        .tip {text-indent: 50%;}
         /* 줄간격 32px */
-
+        .lhpx {line-height: 32px;}
+        /* 
+            본문 텍스트의 줄 간격은 글자 크기의 1.5 ~2배 정도가 적당하다.
+        */
         /* 줄간격 숫자는 글자 크기의 배수: 2 */
-
+        .lhn {line-height: 1.6;} /* 황금비율 : 1.618 */
         /* 줄간격 %는 글자 크기가 기준: 200% */
-
+        .lhp {line-height: 200%;}
         /* 대소문자 변환 */
-
+        .ttn {text-transform: none;}
         /* 모두 대문자 */
-
+        .ttu {text-transform: uppercase;}
         /* 모두 소문자 */
-
+        .ttl {text-transform: lowercase;}
         /* 단어별 첫 글자 대문자 */
+        .ttc {text-transform: capitalize;}
 
     </style>
 </head>
@@ -40,7 +53,7 @@
     <h2>대소문자 변환</h2>
     <p class="ttn">text-transform: none;</p>
     <p class="ttu">text-transform: uppercase;</p>
-    <p class="ttl">text-transform: LOWERCASE;</p>
+    <p class="ttl">TEXT-transform: LOWERCASE;</p>
     <p class="ttc">text-transform: capitalize;</p>
 </body>
 </html>
