--- a/51_css/part3/31-5_white-space.html
+++ b/51_css/part3/31-5_white-space.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML+CSS</title>
     <style>
-        /* 자동 줄 바꿈(o), Enter(x), sp/tab(x) */
+        /* 
+            white-space: 값;
+                값: normal, nowrap, pre, pre-wrap, pre-line
+        */
+
+        /* 
+            한 칸 이상의 공백은 한 칸으로 인식한다.
+        */
+        /* 자동 줄 바꿈(o), Enter(x), spacebar/tab(x) */
         .whn {white-space: normal;}
+        
         /* 자동 줄 바꿈(x), Enter(x), sp/tab(x) */
         .whnw {white-space: nowrap;}
         /* 자동 줄 바꿈(x), Enter(o), sp/tab(o) */
