--- a/51_css/part3/34-8_background.html
+++ b/51_css/part3/34-8_background.html
@@ -23,6 +23,11 @@
         }
 
         /* bg2 클래스에 bg1 클래스에 지정한 것과 같은 동일한 배경 속성을 속기 속성으로 지정해 보세요. */
+        /* background: url() 위치/크기 반복 고정 색*/
+        .bg2 {
+            /* background: url() 위치/크기 반복 색; ->일반적인 순서 , 위치와 크기는 순서를 바꿀 수 없다. */
+            background: url(/51_css/assets/20220511_1124.jpg) left/contain no-repeat yellow;
+        }
     </style>
 </head>
 <body>
