--- a/51_css/part3/34_background-image.html
+++ b/51_css/part3/34_background-image.html
@@ -10,12 +10,13 @@
             width: 500px;
             height: 350px;
             border: 1px solid red;
+            background-image:url(../assets/bg3.png), url(../assets/bg1.jpg);
 
-            /* background-image:url(), url(), ... */
+            /* background-image:url(경로/이미지명), url(), ... */
             /* 첫 번째로 기록한 url이 위로 지정된다. */
 
             /* bg3.png와 bg1.jpg 두 개의 이미지를 하나의 배경 이미지 속성으로 지정하시오. */
-
+            
         }
     </style>
 </head>
