--- a/51_css/part3/34-2_background-position.html
+++ b/51_css/part3/34-2_background-position.html
@@ -15,7 +15,7 @@
 
         /* 
             배경 이미지의 위치
-            background-position: x위치 y위치;
+            background-position: x위치 [y위치];
             단위: px(em, rem), %
             x위치: left, right, center
             y위치: top, bottom, center
@@ -29,6 +29,14 @@
         /* 숫자(단위)의 경우 하나만 쓰면 x위치를 말하고, y위치는 가운데로 설정된다. */
         /* 영문 키워드로 하나만 쓰면 키워드에 따라 x위치 또는 y위치를 말하고, 나머지는 가운데로 설정된다. */
 
+        .bgp1 {background-position: 0 0;}
+        .bgp2 {background-position: 50% 50%;}
+        .bgp3 {background-position: 20%;}
+        .bgp4 {background-position: center center;}
+        .bgp5 {background-position: top;}
+        .bgp6 {background-position: left;}
+        .bgp7 {background-position: 50px 50px;}
+        .bgp8 {background-position: 50px;}
         
     </style>
 </head>
