--- a/51_css/part3/34-3_background-size.html
+++ b/51_css/part3/34-3_background-size.html
@@ -27,10 +27,16 @@
             background-image: url(/51_css/assets/20220511_1124.jpg);
             background-repeat: no-repeat;
         }
-        /* 숫자 0은 단위 생략 가능 */
-        /* 숫자(단위)의 경우 하나만 쓰면 x위치를 말하고, y위치는 가운데로 설정된다. */
+        /* 숫자 0은 단위 생략 가능 */        
         /* %는 이미지 배경이 들어가는 박스 크기가 기준 */
-
+        
+        .bgs1 {background-size: auto;}
+        .bgs2 {background-size: cover;}
+        .bgs3 {background-size: contain;}
+        .bgs4 {background-size: 500px 333px;}
+        .bgs5 {background-size: 333px;}
+        .bgs6 {background-size: 100% 100%;}
+        .bgs7 {background-size: 100%;}
 
 
     </style>
