--- a/51_css/part4/41_transform.html
+++ b/51_css/part4/41_transform.html
@@ -8,11 +8,12 @@
     <title>HTML+CSS</title>
     <style>
         .outer {
+            width: 400px;
             border: 1px solid black;
             /* perspective는 관점 속성으로 부모 요소에 지정한다. */
-            perspective: 1000px;
+            perspective: 500px; /* 3d일때만 사용 */
             /* 관점의 위치로 perspective 속성과 함께 사용해야 한다. */
-            perspective-origin: 50% 50%;
+            /* perspective-origin: 50% 50%; */
             margin: 20px;
         }
 
@@ -52,6 +53,12 @@
         */
 
         /* .outer에 마우스를 올렸을 때 .trftr의 위치를 가로로 100px 이동되게 하시오. */
+        .outer {
+            overflow: hidden;
+        }
+        .trftr{
+            transform: translateX(-100px);
+        }
         .outer:hover .trftr {
             /* transform: translate(100px, 0); */
             transform: translateX(100px);
@@ -60,6 +67,10 @@
         /* .outer에 마우스를 올렸을 때 .trfsc의 크기를 너비/높이 모두 1.2로 지정하시오. */
         /* 기본값 : 1(100%) */
         /* transform: scale(1, 1); */
+        .trfsc {
+            transform: scale(0);
+            height: 4px;
+        }
         .outer:hover .trfsc {
             transform: scale(1.2, 1.2);
             transform: scale(1.2); /* 하나만 써도 값음, 비례적으로 커짐 */
@@ -67,19 +78,34 @@
 
         .trfro {
             /* 변환의 기준 */
-            transform-origin: 0 0;
+            /* 
+                transform-origin: x축 y축; 
+                    값: px, %
+                    x축: left, right, center
+                    y축: top, bottom, center 
+            */
+            transform-origin: 50% 0; /* 기본값: 50% 50% */
+            transform-origin: center top;
         }
         /* .outer에 마우스를 올렸을 때 .trfro를 60도 회전되도록 지정하시오. */
-
+        .outer:hover .trfro {
+            transform: rotate(60deg);
+        }
 
         /* .outer에 마우스를 올렸을 때 .trfrox를 x축 기준으로 60도 회전되도록 지정하시오. */
-
+        .outer:hover .trfrox {
+            transform: perspective(200px) rotateX(60deg);
+        }
 
         /* .outer에 마우스를 올렸을 때 .trfroy를 y축 기준으로 90도 회전되도록 지정하시오. */
-
+        .outer:hover .trfroy {
+            transform: rotateY(90deg);
+        }
 
         /* .outer에 마우스를 올렸을 때 .trfsk를 y축 기준으로 10도 기울이시오. */
-
+        .outer:hover .trfsk {
+            transform: skewY(10deg);
+        }
 
     </style>
 </head>
