--- a/52_js/part1/04-2_typeof.html
+++ b/52_js/part1/04-2_typeof.html
@@ -11,12 +11,26 @@
 <body>
     <h1>데이터 유형</h1>
     <script>
-        // typeof 변수 또는 데이터;
+        // 연산자: typeof ~ 데이터의 유형을 확인
+        // typeof 변수; 
+        // typeof 데이터;
 
         var num = 100;
         var str = '자바스크립트';
+        var bool = true;
+
+        var und;
 
         // 출력
+        document.write(typeof num, '<br>');
+        document.write(typeof 'num', '<br>');
+        document.write(typeof 100, '<br>');
+        document.write(typeof str, '<br>');
+        document.write(typeof bool, '<br>');
+        document.write(typeof false, '<br>');
+        document.write(typeof und, '<br>');
+        document.write(typeof null, '<br>');
+        
 
     </script>
 </body>
