--- a/52_js/part1/05-1_stringPlus.html
+++ b/52_js/part1/05-1_stringPlus.html
@@ -21,7 +21,16 @@
         var t4 = ' 어서 모이자';
         var result;
 
-        document.write(result);
+        // 숫자 + 숫자 -> 숫자
+        result = t3 + t3;
+        document.write(result, '<br>');
+
+        // 문자열 + 숫자 -> 나열
+        // 숫자 + 문자열 -> 나열
+        // 문자열 + 문자열 -> 나열
+        // 숫자 + 숫자 + 문자열 -> 나열
+        result = t3 + t3 + t1;
+        document.write(result + '<br>');
         
     </script>
 </body>
