--- a/52_js/part1/05-2_나이계산.html
+++ b/52_js/part1/05-2_나이계산.html
@@ -18,15 +18,17 @@
         var age;
 
         // 입력
-
+        birthYear = prompt('당신의 태어난 년도를 4자리로 입력하세요.');
 
         // 처리
-
+        // 현재년도 - 태어난년도 + 1 -> 나이
+        age = currentYear - birthYear + 1;
 
         // 출력
-
+        document.write('당신의 나이는 ' + age + '살 입니다.');
         
     </script>
+
 </body>
 
 </html>
