--- a/52_js/part1/05-2_증감.html
+++ b/52_js/part1/05-2_증감.html
@@ -21,6 +21,20 @@
         var num1 = 10;
         var num2 = 20;
         var result;
+
+        num1++;
+        document.write(num1, '<br>');
+
+        ++num1;
+        document.write(num1, '<br>');
+
+        result = num2++;
+        document.write(result, '<br>');
+        document.write(num2, '<br>');
+
+        result = ++num2;
+        document.write(result, '<br>');
+        document.write(num2, '<br>');
         
     </script>
 </body>
