--- a/52_js/part1/09_threeCondi.html
+++ b/52_js/part1/09_threeCondi.html
@@ -12,14 +12,20 @@
     <h1>연산자</h1>
     <script>
         /* 
+            삼항? 피연산자 3개
             삼항 조건 연산자: ? :
 
+            피연산자1 ? 피연산자2 : 피연산자3;
+
             조건식 ? 코드1 : 코드2;
+            조건식이 true이면 코드1을 실행
+            조건식이 false이면 코드2을 실행
         */
 
         var a = 10;
         var b = 3;
 
+        result = a > b ? '참이다' : '거짓이다';
         document.write(result);
     </script>
 </body>
