--- a/52_js/part1/10_적정체중구하기.html
+++ b/52_js/part1/10_적정체중구하기.html
@@ -22,19 +22,31 @@
         */
 
         // 입력
-        var userName;
-        var userHeight;
-        var userWeight;
+        var userName = prompt('당신의 이름을 입력하세요.');
+        var userHeight = prompt('당신의 키를 입력하세요.');
+        var userWeight = prompt('당신의 몸무게를 입력하세요.');
+        var normal_w;
+        var over_w;
+        var result;
 
         // 처리
         // 적정 체중 = (신장 - 100) * 0.9
+        normal_w = (userHeight - 100) * 0.9
 
-        
-        // 오차 범위 ±5
+        // 초과 체중 = 입력자의 체중 - 적정체중
+        over_w = userWeight - normal_w;
 
+        // 오차 범위 ±5 : 적정 체중 +5 이하, 적정 체중 -5 크거나
+        // 적정 체중이 72kg: 72 - 5 = 67 이상, 72 + 5 = 77 이하 -> (67이상 ~ 77이하)
+        result = userWeight >= normal_w - 5 && userWeight <= normal_w + 5;
+
+        // 조건식 ? 코드1 : 코드2;
+        // 적정 체중 === 입력자의 체중 ? 적정체중입니다. : 적정 체중이 아닙니다. ;
+        // result = normal_w === userWeight ? '적정체중입니다.' : '적정 체중이 아닙니다.' ;
+        result = result ? '적정체중입니다.' : '적정 체중이 아닙니다.' ;
 
         // 출력
-        document.write(userName + '님은 ' + result);
+        document.write(userName + '님의 적정 체중은 ' +  normal_w + 'kg이며, 현재 적정 체중에서 ' + over_w + 'kg 차이로 ' + result);
     </script>
 </body>
 
