--- a/52_js/part1/21-2_if_test.html
+++ b/52_js/part1/21-2_if_test.html
@@ -17,7 +17,7 @@
             }
         */
 
-        var userName = prompt('이름을 입력하세요!', '');
+        var userName = Number(prompt('이름을 입력하세요!', ''));
 
         if (userName) {
             document.write(userName + '님 반갑습니다! 방문을 환영합니다.');
