--- a/52_js/part1/21_if.html
+++ b/52_js/part1/21_if.html
@@ -25,6 +25,7 @@
             8. 객체
             9. 이벤트 + 제이쿼리
 
+            // 조건식이 true(참)일 경우 코드를 실행
             if (조건식) {
                 코드;
             }
@@ -35,7 +36,7 @@
             document.write('hello1', '<br>');
         }
 
-        // 조건식에 false, 0, null, ''(빈 문자), undefined를 사용하면 false, 그 밖의 값은 true
+        // 조건식에 NaN, false, 0, null, ''(빈 문자), undefined를 사용하면 false, 그 밖의 값은 true
         var num2 = 3;
         if (num2) {
             document.write('hello2', '<br>');
