--- a/52_js/part1/22-1_회원탈퇴.html
+++ b/52_js/part1/22-1_회원탈퇴.html
@@ -19,6 +19,9 @@
             }
         */
 
+        // confirm(): 확인/취소 창
+        // 확인 -> true
+        // 취소 -> false
         var result = confirm('정말로 회원을 탈퇴하시겠습니까?');
 
         if (result) {
