--- a/52_js/part1/22_if_else.html
+++ b/52_js/part1/22_if_else.html
@@ -12,6 +12,10 @@
     <h1>if</h1>
     <script>
         /* 
+            삼항 조건 연산자
+            (조건식) ? 코드1 : 코드2 ;
+
+            제어문 끝은 ; 생략한다.
             if (조건식) {
                 코드1;
             } else {
