--- a/52_js/part1/24_중첩if.html
+++ b/52_js/part1/24_중첩if.html
@@ -19,6 +19,7 @@
             }
         */
 
+        // 데이터베이스에 저장된 자료를 가져와서 검사한다.
         var id = 'easy1004';
         var pw = '112233';
 
@@ -31,6 +32,7 @@
             } else {
                 alert('비밀번호가 일치하지 않습니다.');
                 // 브라우저 새로고침
+                // 객체: window, document, console, location
                 location.reload();
             }
         } else {
