--- a/52_js/part1/23_if_else_if.html
+++ b/52_js/part1/23_if_else_if.html
@@ -23,17 +23,29 @@
             }
         */
 
-        var mon = prompt('현재는 몇 월입니까?', '0');
+        // prompt의 결과는 문자열
+        var mon = Number(prompt('현재는 몇 월입니까?', '0'));
 
+        // 9이상 11이하 -> 9월, 10월, 11월
         if (mon >= 9 && mon <= 11) {
             document.write('독서의 계절 가을이네요!');
+        // 6이상 8이하 -> 6월, 7월, 8월
         } else if (mon >= 6 && mon <= 8) {
             document.write('여행가지 좋은 여름이네요!');
+        // 3이상 5이하 -> 3월, 4월, 5월
         } else if (mon >= 3 && mon <= 5) {
-            document.write('햇살 가득한 봄이네요!');
-        } else {
+            document.write('햇살 가득한 봄이네요!');         
+        // 12월, 1월, 2월
+        // 1이상 2이하
+        // ==는 데이터의 유형 구분하지 않는다.
+        // '12' == 12 -> true
+        // ===는 데이터 유형 구분한다.
+        // '12' === 12 -> false
+        } else if (mon >= 1 && mon <= 2 || mon === 12) {
             document.write('스키의 계절 겨울이네요!');
-        }
+        } else {
+            document.write('1~12 사이의 숫자를 입력하세요.');
+        } 
     </script>
 </body>
 
