--- a/52_js/part1/26-1_2의배수,6의배수.html
+++ b/52_js/part1/26-1_2의배수,6의배수.html
@@ -21,7 +21,19 @@
         */
 
         // 1부터 30까지의 숫자 중 4의 배수이면서 6의 배수인 숫자 출력
+        // 어떤 수를 4로 나누었을 때 나머지가 0이면 4의 배수
+        // i % 4 == 0
+        // 어떤 수를 6로 나누었을 때 나머지가 0이면 6의 배수
+        // i % 6 == 0
+        
+        var i =1;
 
+        while (i <= 30) {
+            if (i % 4 == 0 && i % 6 == 0){
+            document.write(i, '<br>');
+            }
+            i++;
+        }
 
         document.write('==== The End ====');
     </script>
