--- a/52_js/part1/26_while.html
+++ b/52_js/part1/26_while.html
@@ -14,6 +14,8 @@
         /* 
             var 변수 = 초깃값;
 
+            // 조건식이 true이면 코드 -> 증감식 -> 조건식 순서로 계속 반복 실행한다.
+            // 조건식이 false이면 while문을 종료한다.
             while (조건식) {
                 코드;
                 증감식;
